--- a/styles.less
+++ b/styles.less
@@ -6,7 +6,13 @@
 @colorGreen: #43a047;
 @colorWhite: #ffffff;
 @colorRed: #e53935;
-
+@name: {
+  color: @colorBlack;
+  font-size: 3.9em;
+  font-weight: 100;
+  text-transform: uppercase;
+  letter-spacing: -0.07em;
+};
 
 * {
   margin: 0;
@@ -501,7 +507,7 @@
 .hotDeal {
   width: 1170px;
   height: 800px;
-margin-top: 118px;
+  margin-top: 118px;
 }
 
 .hotDeal-text {
@@ -520,10 +526,10 @@ margin-top: 118px;
 .hotDeal-name,
 .mobile-name {
   color: @colorBlack;
-  font-size: 62px;
+  font-size: 3.8em;
   font-weight: 100;
   text-transform: uppercase;
-  letter-spacing: -2.8px;
+  letter-spacing: -0.06em;
 }
 
 .hotDeal-text p {
