--- a/styles.css
+++ b/styles.css
@@ -441,10 +441,10 @@
 .hotDeal-name,
 .mobile-name {
   color: #212121;
-  font-size: 62px;
+  font-size: 3.8em;
   font-weight: 100;
   text-transform: uppercase;
-  letter-spacing: -2.8px;
+  letter-spacing: -0.06em;
 }
 .hotDeal-text p {
   color: #6c6c6c;
