--- a/styles.less
+++ b/styles.less
@@ -92,6 +92,7 @@
   justify-content: space-between;
   width: 1366px;
   padding-right: 196px;
+  height: fit-content;
 }
 
 @media screen and (max-width: 1200px) {
@@ -644,7 +645,7 @@
 .mobile {
   height: 516px;
   background-image: url(img/mobile_app/back-img.jpg);
-margin-top: 120px;
+  margin-top: 120px;
 }
 
 .mobile-text {
@@ -683,7 +684,6 @@ margin-top: 120px;
   margin-right: 7px;
 }
 
-
 /* ------ FOOTER ------ */
 
 .footer {
@@ -695,7 +695,7 @@ margin-top: 120px;
   display: grid;
   grid-template-columns: 19% 36% 32%;
   column-gap: 80px;
-  padding-top: 114px
+  padding-top: 114px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -704,10 +704,9 @@ margin-top: 120px;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(3, 1fr);
     row-gap: 40px;
-    padding-top: 114px
+    padding-top: 114px;
   }
 }
-
 
 .footer-name {
   color: @colorDarkGray;
@@ -883,8 +882,6 @@ margin-top: 120px;
   border-bottom: 4px solid @colorBlack;
 }
 
-
-
 .albom {
   width: fit-content;
 }
@@ -940,4 +937,223 @@ margin-top: 120px;
   background-image: url(img/promo_product/promo-img.jpg);
   height: 683px;
   width: 683px;
+}
+
+/* ------ DETAILS ------ */
+
+.details-head {
+  height: 119px;
+  background-color: @colorWhite;
+  position: relative;
+}
+
+@media screen and (max-width: 1000px) {
+  .details-head {
+    height: 260px;
+  }
+}
+
+.details-menu {
+  display: flex;
+  height: 70px;
+  background-color: @colorLightLightGray;
+  justify-content: center;
+}
+
+.nav {
+  height: 71px;
+  align-items: center;
+}
+
+@media screen and (max-width: 1200px) {
+  .details-menu {
+    display: flex;
+    height: 70px;
+    background-color: @colorLightLightGray;
+    justify-content: center;
+    width: fit-content;
+  }
+}
+
+.nav-link {
+  padding: 8px 4px;
+  color: @colorDarkGray;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1.8px;
+}
+
+.nav-link-active {
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: @colorBlack;
+  letter-spacing: 1.2px;
+}
+
+.nav-link-active:hover {
+  text-decoration: none;
+}
+
+.details-menu .justify-content-center {
+  width: 700px;
+  justify-content: space-evenly !important;
+}
+
+.nav-item a:hover {
+  color: @colorBlack;
+}
+
+/* PRODUCT */
+
+.slider-small-list {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 230px;
+  justify-items: center;
+  padding: 0px 180px;
+  margin-top: 10px;
+}
+
+.product {
+  margin-top: 72px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-bottom: 97px;
+}
+
+@media screen and (max-width: 1200px) {
+  .product {
+    margin-top: 72px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    margin-bottom: 97px;
+    width: fit-content;
+  }
+}
+
+.product-about {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  padding-top: 36px;
+}
+
+.product-name {
+  color: #212121;
+  font-size: 36px;
+  font-weight: 700;
+  letter-spacing: -0.02em;
+}
+
+.product-hot {
+  color: @colorRed;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  margin-top: 2px;
+}
+
+.product-price {
+  color: @colorBlack;
+  font-size: 36px;
+  font-weight: 300;
+  display: flex;
+  align-items: baseline;
+}
+
+.product-price_number {
+  font-size: 72px;
+}
+
+.product-about .button {
+  border-radius: 35px;
+  background-color: #f44336;
+  width: 510px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: @colorWhite;
+  font-size: 22px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 4.4px;
+  margin-top: 8px;
+}
+
+.product-about .button img {
+  padding: 0 10px;
+}
+
+.product-text {
+  width: 499px;
+  height: 255px;
+  overflow: hidden;
+  color: @colorBlack;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 0.2px;
+  margin-top: 48px;
+}
+
+.product-text p {
+  margin-bottom: 0.8rem;
+}
+
+.related {
+  background-color: @colorWhite;
+  margin-top: 70px;
+}
+
+.related .trending-title {
+  margin-top: 110px;
+}
+
+.related .trending-albom {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  row-gap: 30px;
+  column-gap: 30px;
+  width: 1170px;
+  height: 370px;
+  overflow: hidden;
+  margin-top: 58px;
+  margin-bottom: 120px;
+}
+
+@media screen and (max-width: 1200px) {
+  .related .trending-albom {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    row-gap: 30px;
+    column-gap: 30px;
+    width: fit-content;
+    height: 370px;
+    overflow: hidden;
+    margin-top: 58px;
+    margin-bottom: 120px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .related .trending-albom {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    row-gap: 30px;
+    column-gap: 30px;
+    row-gap: 30px;
+    width: fit-content;
+    height: 370px*2;
+    overflow: hidden;
+    margin-top: 58px;
+    margin-bottom: 100px;
+  }
 }
