--- a/styles.less
+++ b/styles.less
@@ -1151,9 +1151,89 @@
     column-gap: 30px;
     row-gap: 30px;
     width: fit-content;
-    height: 370px*2;
+    height: 370px * 2;
     overflow: hidden;
     margin-top: 58px;
     margin-bottom: 100px;
+  }
+}
+
+/* ------ CONTACTS ------*/
+
+.contact {
+  height: 563px;
+  background-color: @colorWhite;
+}
+
+.contact-blocks {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  column-gap: 30px;
+}
+
+@media screen and (max-width: 1200px) {
+  .contact-blocks {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    column-gap: 30px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .contact {
+    height: 1400px;
+  }
+}
+
+.contact-block {
+  border: 1px solid @colorBlack;
+  width: 368px;
+  height: 370px;
+  margin-top: 70px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-position {
+  padding-bottom: 28px;
+}
+
+.contact-name {
+  color: @colorBlack;
+  font-size: 22px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding-bottom: 12px;
+}
+
+.contact-phone,
+.contact-mail,
+.contact-address {
+  color: @colorDarkGray;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.contact-phone_number,
+.contact-mail_value {
+  color: @colorBlack;
+  font-size: 14px;
+  font-weight: 700;
+  padding-bottom: 10px;
+}
+
+.contact-address_value {
+  color: @colorBlack;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+@media screen and (max-width: 1000px) {
+  .product-head_text {
+    padding-top: 280px;
   }
 }
